src/include/dart_api.h


typedef struct _Dart_Isolate* Dart_Isolate;
typedef struct _Dart_IsolateGroup* Dart_IsolateGroup;
typedef struct _Dart_Handle* Dart_Handle;
typedef struct {
  int32_t version;
  const uint8_t* vm_snapshot_data;
  const uint8_t* vm_snapshot_instructions;
  Dart_IsolateGroupCreateCallback create_group;
  Dart_InitializeIsolateCallback initialize_isolate;
  Dart_IsolateShutdownCallback shutdown_isolate;
  Dart_IsolateCleanupCallback cleanup_isolate;
  Dart_IsolateGroupCleanupCallback cleanup_group;
  Dart_ThreadStartCallback thread_start;
  Dart_ThreadExitCallback thread_exit;
  Dart_FileOpenCallback file_open;
  Dart_FileReadCallback file_read;
  Dart_FileWriteCallback file_write;
  Dart_FileCloseCallback file_close;
  Dart_EntropySource entropy_source;
  Dart_GetVMServiceAssetsArchive get_service_assets;
  bool start_kernel_isolate;
  Dart_CodeObserver* code_observer;
#if defined(__Fuchsia__)
  zx_handle_t vmex_resource;
#endif
} Dart_InitializeParams;
DART_EXPORT DART_API_WARN_UNUSED_RESULT char* Dart_Initialize(
    Dart_InitializeParams* params);
DART_EXPORT void* Dart_CurrentIsolateGroupData(void);
typedef int64_t Dart_IsolateGroupId;
DART_EXPORT Dart_IsolateGroupId Dart_CurrentIsolateGroupId(void);
DART_EXPORT void* Dart_IsolateGroupData(Dart_Isolate isolate);
DART_EXPORT Dart_Handle Dart_DebugName(void);
DART_EXPORT const char* Dart_DebugNameToCString(void);
DART_EXPORT const char* Dart_IsolateServiceId(Dart_Isolate isolate);
DART_EXPORT void Dart_EnterIsolate(Dart_Isolate isolate);
DART_EXPORT void Dart_KillIsolate(Dart_Isolate isolate);
DART_EXPORT void Dart_NotifyIdle(int64_t deadline);
typedef void (*Dart_HeapSamplingReportCallback)(void* context, void* data);
typedef void* (*Dart_HeapSamplingCreateCallback)(
    Dart_Isolate isolate,
    Dart_IsolateGroup isolate_group,
    const char* cls_name,
    intptr_t allocation_size);
typedef void (*Dart_HeapSamplingDeleteCallback)(void* data);
DART_EXPORT void Dart_EnableHeapSampling(void);
DART_EXPORT void Dart_DisableHeapSampling(void);
DART_EXPORT void Dart_RegisterHeapSamplingCallback(
    Dart_HeapSamplingCreateCallback create_callback,
    Dart_HeapSamplingDeleteCallback delete_callback);
DART_EXPORT void Dart_ReportSurvivingAllocations(
    Dart_HeapSamplingReportCallback callback,
    void* context,
    bool force_gc);
DART_EXPORT void Dart_SetHeapSamplingPeriod(intptr_t bytes);
DART_EXPORT void Dart_NotifyDestroyed(void);
DART_EXPORT void Dart_NotifyLowMemory(void);
typedef enum {
  Dart_PerformanceMode_Default,
  Dart_PerformanceMode_Latency,
  Dart_PerformanceMode_Throughput,
  Dart_PerformanceMode_Memory,
} Dart_PerformanceMode;
DART_EXPORT Dart_PerformanceMode
Dart_SetPerformanceMode(Dart_PerformanceMode mode);
DART_EXPORT void Dart_StartProfiling(void);
DART_EXPORT void Dart_StopProfiling(void);
DART_EXPORT void Dart_ThreadDisableProfiling(void);
DART_EXPORT void Dart_ThreadEnableProfiling(void);
DART_EXPORT void Dart_AddSymbols(const char* dso_name,
                                 void* buffer,
                                 intptr_t buffer_size);
DART_EXPORT void Dart_ExitScope(void);